src/styles.css
@import url("https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css");

:host {
    display: block;
    --matchfield-width: 80;
    --matchfield-height: 40;
    --matchfield-spacing: calc((var(--matchfield-height) / 10) * 2px);
}

a {
    color: antiquewhite;
}

a:hover {
    text-decoration: none;
}

section {
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
    font-size: 2em;
}

.top-bar {
    background-color: black;
    color: antiquewhite;
    font-family: monospace;
    padding: var(--matchfield-spacing);
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.matchfield {
    display: flex;
    flex-wrap: wrap;
    flex-grow: 1;
    background: darkslategrey;
    box-sizing: border-box;
}

.cell {
    width: calc(100% / var(--matchfield-width));
    height: calc(100% / var(--matchfield-height));
    border: calc(var(--matchfield-spacing) / 2) solid black;
    box-sizing: border-box;
}

.cell:hover {
    border-color: antiquewhite;
    cursor: crosshair;
}

.cell[data-cell-alive="true"] {
    border-color: red;
    background-image: url("heart.svg");
    background-position: center center;
    background-size: 75% 75%;
    background-repeat: no-repeat;
}

.github {
    background-image: url("github-mark.png");
    background-position: center center;
    background-size: 100% 100%;
    background-repeat: no-repeat;
    width: 1em;
    height: 1em;
    display: block;
}

.next {
    background-color: black;
    color: white;
    width: 2em;
    height: 2em;
    line-height: 2em;
    border-radius: 1em;
    text-align: center;
    font-size: 1.5em;
    position: fixed;
    bottom: 1em;
    right: 1em;
}

.next:hover {
    background-color: white;
    color: black;
    cursor: pointer;
}

.next:before {
    content: "+";
}

